 * Remember the status message when a contact goes offline
 * Extand "/event" to allow a wildchar '*'
 * New option "block_unsubscribed"
   When set, messages from people who don't have a subscription to our
   presence updates are blocked.
 * New option "delete_on_reject"
   When set, people are automatically removed from the roster if their
   subscription request is rejected.
 * MUC: New option "muc_auto_whois"
 * MUC: Allow "/room join . [nick]" if the current item is a MUC room
 * MUC: Fix joining a room when the buddylist is empty
 * MUC: Try to work around some server and network issues
 * Ctrl-l now reread color option values
 * Tab characters are expanded when the "verbatim multi-line mode" is enabled
 * Disable file permission checks on Cygwin
 * Improve logging (especially, XML data isn't truncated anymore)
 * Fix negative priority
 * Other misc. bugfixes and improvements
 * Documentation updates

 -- Mikael, ?

mcabber (0.7.6)

 * Initial Cygwin port (Soren Andersen)
 * Fix a segfault when mcabber is not connected to a Jabber server
   (reported by Mario Iseli)
 * Correctly restore term settings when interrupting the password query
 * Fix a small bug in the /request command (reported by pmw)
 * MUC: Fix "/room whois" with UTF-8 nickname
 * MUC: Fix completion for UTF-8 nicknames
 * Improve support for long messages
 * Add command "/msay toggle"
 * Allow messages with a subject (with /msay)
 * New option "log_display_sender"
 * Multi-line mode: Do not send empty messages
 * Update documentation

 -- Mikael, 2006-04-14

mcabber (0.7.5)

 * History files now use UTF-8 encoding
   See file "NEWS" for an example to convert existing log files
 * UI change: Add two status/info lines
 * Meta keys can be used (and bound to a command)
 * Add Ctrl-left/right to move 1 word backward/forward in the input line
 * Outgoing messages can be colorized
 * The color options names have changed, several colors have been added.